rules.v4
# Generated by iptables-save v1.4.21 on Wed Dec 22 06:02:18 2021
*nat
:PREROUTING ACCEPT [3027:165380]
:INPUT ACCEPT [3005:164284]
:OUTPUT ACCEPT [30:2100]
:POSTROUTING ACCEPT [48:2864]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8888 -j DNAT --to-destination 10.10.10.2:80
-A POSTROUTING -s 10.10.10.0/24 -j MASQUERADE
-A POSTROUTING -s 10.10.10.0/24 -j MASQUERADE
-A POSTROUTING -s 10.10.10.0/24 -j MASQUERADE
-A POSTROUTING -s 10.10.10.0/24 -j MASQUERADE
-A POSTROUTING -s 10.10.10.0/24 -j MASQUERADE
COMMIT
# Completed on Wed Dec 22 06:02:18 2021
# Generated by iptables-save v1.4.21 on Wed Dec 22 06:02:18 2021
*filter
:INPUT ACCEPT [4:280]
:FORWARD ACCEPT [1:60]
:OUTPUT ACCEPT [2045:82698]
:INVALID_TCP - [0:0]
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state ! --state RELATED,ESTABLISHED -j INVALID_TCP
-A INPUT -p tcp -m tcp --tcp-flags FIN FIN -m state ! --state RELATED,ESTABLISHED -j INVALID_TCP
-A INPUT -m state --state INVALID -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j INVALID_TCP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m recent --rcheck --name LIST --mask 255.255.255.255 --rsource -j INVALID_TCP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m recent --rcheck --name LIST --mask 255.255.255.255 --rsource -j INVALID_TCP
-A INVALID_TCP -p tcp -m recent --set --name LIST --mask 255.255.255.255 --rsource
-A INVALID_TCP -p tcp -m recent --rcheck --name LIST --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
COMMIT
# Completed on Wed Dec 22 06:02:18 2021
